[package]
name = "tokio-unix-tcp"
description = "Unified Unix domain socket and TCP socket types for Tokio"
authors = ["networkException <git@nwex.de>"]
version = "0.2.0"
edition = "2021"
license = "BSD-2-Clause OR MIT"
homepage = "https://nwex.de/"
repository = "https://github.com/networkException/tokio-unix-tcp"
readme = "README.md"

[dependencies]
mio = { version = "1.0.3", features = ["net"] }
serde = { version = "1.0.188", features = ["derive"], optional = true }
tokio = { version = "1.42.0", features = ["net"] }

[features]
default = []
serde = ["dep:serde"]
